--- a/moviediscovery/pom.xml
+++ b/moviediscovery/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>json</artifactId>
             <version>20230618</version>
         </dependency>
+        <!-- Caffeine Cache -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.1.8</version>
+        </dependency>
     </dependencies>
 
 </project>
