--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ bld/
 .vscode/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
-moviediscovery\src\main\resources\config\config.properties
+moviediscovery/src/main/resources/config/config.properties
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
