--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - local-kafka
     ports:
       - "9092:9092"
+    volumes:
+      - kafka_data:/var/lib/kafka/data
     environment:
       KAFKA_NODE_ID: 1
       KAFKA_PROCESS_ROLES: broker,controller
@@ -51,13 +53,15 @@ services:
     networks:
       - local-kafka
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: felipesql
-      POSTGRES_DB: mi_base_datos
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+
 
   pgadmin:
     image: dpage/pgadmin4
@@ -78,3 +82,4 @@ services:
 volumes:
   postgres_data:
   pgadmin_data:
+  kafka_data:
